--- a/proj2/styles.css
+++ b/proj2/styles.css
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   height: 100vh;
   font-family: Arial, sans-serif;
-  color: #d0b85c;
+ 
   overflow: hidden;
 }
 
@@ -16,12 +16,23 @@ h1 {
 }
 
 #wordContainer {
-  font-size: 14em;
+  color: #d0b85c;
+  font-size: 8em;
   text-align: center;
-  margin-bottom: 100px;
+  margin-bottom: 140px;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
   /* Adjust the values as needed */
 }
+
+#meaningContainer {
+  color: #7157db;
+  font-size: 6em;
+  text-align: center;
+  margin-bottom: 60px;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+  /* Adjust the values as needed */
+}
+
 
 #countdown {
   position: absolute;
@@ -39,9 +50,19 @@ h1 {
   /* Add rounded corners for the border */
 }
 
-.voice-select-container {
+.voice-select-container-word {
   position: absolute;
   top: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  font-size: 4px;
+  color: white;
+}
+
+.voice-select-container-meaning {
+  position: absolute;
+  top: 40px;
   right: 10px;
   display: flex;
   align-items: center;
