--- a/proj2/styles.css
+++ b/proj2/styles.css
@@ -19,7 +19,7 @@ h1 {
   color: #d0b85c;
   font-size: 8em;
   text-align: center;
-  margin-bottom: 140px;
+  margin-top: -100px;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
   /* Adjust the values as needed */
 }
@@ -28,7 +28,6 @@ h1 {
   color: #7157db;
   font-size: 6em;
   text-align: center;
-  margin-bottom: 60px;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
   /* Adjust the values as needed */
 }
@@ -36,19 +35,11 @@ h1 {
 
 #countdown {
   position: absolute;
-  bottom: 80px;
-  font-size: 5em;
+  bottom: 60px;
+  font-size: 4em;
   color: #d47868;
 }
 
-.countdown-border {
-  border: 1px solid #00000;
-  /* Add border to the countdown element */
-  padding: 5px;
-  /* Add padding for spacing */
-  border-radius: 5px;
-  /* Add rounded corners for the border */
-}
 
 .voice-select-container-word {
   position: absolute;
