--- a/proj2/styles.css
+++ b/proj2/styles.css
@@ -15,6 +15,16 @@ h1 {
   margin-bottom: 20px;
 }
 
+#headerContainer{
+  color: #efe0e9;
+  font-size: 8em;
+  text-align: center;
+  position: absolute;
+  margin-top: -200px;
+  text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
+	
+}	
+
 #wordContainer {
   color: #d0b85c;
   font-size: 8em;
