--- a/proj2/styles.css
+++ b/proj2/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(15, 14, 17);
+  background-color: black;
   margin: 0;
   display: flex;
   flex-direction: column;
@@ -28,7 +28,7 @@ h1 {
   color: #d0b85c;
   font-size: 4em;
   text-align: center;
-  margin-top: -400px;
+  margin-top: -300px;
   padding: 200px;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
   /* Adjust the values as needed */
@@ -37,7 +37,7 @@ h1 {
 
 #meaningContainer {
   color: #7157db;
-  font-size: 3em;
+  font-size: 4em;
   text-align: center;
   padding: 200px;
   text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
@@ -53,7 +53,7 @@ h1 {
 #countdown {
   position: absolute;
   bottom: 130px;
-  font-size: 8em;
+  font-size: 7em;
   color: #d47868;
 }
 
@@ -89,7 +89,7 @@ h1 {
 #poweredBy {
   position: absolute;
   color: white;
-  font-size: 50px;
+  font-size: 45px;
 }
 
 .marquee {
@@ -115,7 +115,7 @@ h1 {
 #wordCount {
   position: absolute;
   bottom: 30px;
-  font-size: 4em;
+  font-size: 3em;
   color: #F1F8E9;
 }
 
